Upgrades tests to Junit5.